--- a/tads.html
+++ b/tads.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundo de Montanhas</title>
+    <title>Para Minha Querida Esposa</title>
     <style>
         body {
             background-image: url('montanhas.jpg'); /* Substitua 'montanhas.jpg' pelo caminho da sua imagem de montanhas */
@@ -15,18 +15,39 @@
             padding: 0;
         }
 
-        /* Estilos adicionais para o conteúdo da página */
         .content {
             text-align: center;
             padding: 50px;
-            background-color: rgba(255, 255, 255, 0.7); /* Fundo semi-transparente para facilitar a leitura */
+            background-color: rgba(255, 255, 255, 0.7);
+        }
+
+        .poem {
+            font-family: cursive;
+            font-size: 24px;
+            color: #e60000; /* Cor vermelha para o poema */
+            margin-top: 20px;
+        }
+
+        .image {
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
     <div class="content">
-        <h1>Bem-vindo às Montanhas</h1>
-        <p>Desfrute da vista espetacular!</p>
+        <h1>Para Minha Querida Esposa</h1>
+        <p>Desfrute da vista espetacular e do amor que sinto por você!</p>
+        <div class="image">
+            <img src="coracao.jpg" alt="Coração" width="150">
+        </div>
+        <div class="poem">
+            <p>
+                No jardim do nosso amor, és a flor mais bela,<br>
+                Cada momento contigo é uma tela,<br>
+                Pintada com carinho e paixão sem fim,<br>
+                És a razão da minha alegria, és tudo para mim.
+            </p>
+        </div>
     </div>
 </body>
 </html>
