--- a/tads.html
+++ b/tads.html
@@ -29,7 +29,9 @@
         }
 
         .image {
-            margin-top: 20px;
+            position: absolute;
+            top: 10px;
+            right: 10px;
         }
     </style>
 </head>
