--- a/tads.html
+++ b/tads.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Para Minha Querida Esposa</title>
+    <title>Para Minha Querida Esposa que Amo Muito</title>
     <style>
         body {
             background-image: url('montanhas.jpg'); /* Substitua 'montanhas.jpg' pelo caminho da sua imagem de montanhas */
